# tinyml-sensor-anomaly-detector

./: ARCHITECTURE.md  CMakeLists.txt  README.md
docs/: cpp17-design-patterns-and-solid.md  deep-architecture.md  validation-plan.md
docs/design/: README.md  implementation-roadmap.md  interface-control.md  requirements.md  runtime-design.md  system-design.md  validation-plan.md
docs/design/diagrams/: system-design.drawio
docs/diagrams/: README.md  full-system-uml.drawio
include/project_runtime/: ProjectRuntime.hpp
src/: ProjectRuntime.cpp  main.c  main.cpp
tests/: ProfileTests.cpp  ProjectRuntimeTests.cpp  test_repo_smoke.py
